docs(week1-CA): 인터럽트 이미지 추가

--- a/miayujeong/CA/05_인터럽트.md
+++ b/miayujeong/CA/05_인터럽트.md
@@ -47,6 +47,8 @@
 
 ### 인터럽트가 처리되는 순서
 
+<img src="images/ca_05_1.png" width="500px">
+
 1. 입출력 장치가 CPU에 인터럽트 요청 신호를 보냄
 2. CPU는 명령어 사이클마다 인터럽트 여부를 항상 확인함
 3. 이때 인터럽트 요청이 있으면, 현재 인터럽트를 처리할 수 있는지를 확인
