--- a/miayujeong/CA/08_병렬처리 & 멀티코어.md
+++ b/miayujeong/CA/08_병렬처리 & 멀티코어.md
@@ -85,6 +85,7 @@
     - chip 간의 communication보다 chip 안에서의 communication이 더 빠름
     - 전력 소모도 더 적음
 - 각 core는 고유의 레지스터와 캐시 가짐
+- 오늘날 우리가 사용하는 모든 CPU는 멀티코어
 
 <br>
 
