fix(week2-CA) : 오타 수정

--- a/sngjuni/CA/09_버스 구조 & IO.md
+++ b/sngjuni/CA/09_버스 구조 & IO.md
@@ -27,7 +27,7 @@
    - 읽기(Read), 쓰기(Write), 인터럽트, 클럭 등 제어 신호 전달
    - 양방향 (CPU ↔ 메모리, I/O)
    - ex)
-     - R**e**ad/Write 신호: 메모리 읽기/쓰기 동작 제어
+     - Read/Write 신호: 메모리 읽기/쓰기 동작 제어
      - 클럭 신호(Clock): 모든 동작의 기준 타이밍 제공
      - 인터럽트 신호: I/O 장치가 CPU에 작업 완료를 알림
 
