fix(week3-OS) : 프로세스 개념 & 상태 전이 구조 변경

--- a/ohjisu/OS/프로세스 개념 & 상태 전이.md
+++ b/ohjisu/OS/프로세스 개념 & 상태 전이.md
@@ -1,6 +1,7 @@
 ### 📌 한줄 요약
 
 프로세스는 메모리에서 실행 중인 프로그램을 의미하며, 생성부터 종료까지 준비, 실행, 대기 등 정해진 상태를 거치며 운영체제(OS)에 의해 관리되는 작업의 단위이다.
+
 ---
 
 1. 프로세스(Process)란 무엇인가?
@@ -29,6 +30,8 @@
 3. 프로세스의 상태 전이 (State Transition)
 프로세스의 상태는 고정되어 있지 않고, 특정 이벤트에 의해 계속해서 바뀐다. 이를 상태 전이라고 한다.
 
+```markdown
+
              ┌──────────┐
              │   생성   │
              └─────┬────┘
@@ -43,6 +46,8 @@
       │  ⑤ I/O or     ┌──────────┐
       └────────────┤   대기   │
         Event Complete  └──────────┘
+```
+
 ① 생성 → 준비 (Admitted): 운영체제가 프로세스 생성을 승인하면, 해당 프로세스는 CPU를 할당받기 위해 준비 큐로 이동한다.
 
 ② 준비 → 실행 (Dispatch): 준비 상태의 프로세스 중 하나가 스케줄러에 의해 선택되어 CPU를 할당받는다.
