--- a/valofosho/OS/프로세스 개념 & 상태 전이.md
+++ b/valofosho/OS/프로세스 개념 & 상태 전이.md
@@ -1,35 +1,79 @@
 # 프로세스 개념(Process Concept)
+
 ## 프로세스란? (Process)
-- 프로세스란 실행중인 프로그램을 칭함
-- 프로세스는 현대 컴퓨팅 시스템에서 작업의 단위가 된다.
+- 실행 중인 프로그램을 의미
+- 현대 컴퓨팅 시스템에서 작업의 단위가 됨
 
 ## 프로세스 개념의 등장 배경
-- 초기 컴퓨터 시스템은 한 번에 하나의 프로그램만 실행 허용
-  -> 시스템을 완전히 제어하고 시스템의 모든 자원에 접근 가능
-- 현대 컴퓨터 시스템은 메모리에 다수의 프로그램을 적재시켜 병행 실행
-- 다양한 프로그램을 보다 견고하게 제어하고 구획화해야 하기에 프로세스 개념 등장
+- 초기 컴퓨터 시스템은 한 번에 하나의 프로그램만 실행 가능  
+  → 시스템 전체를 독점적으로 제어, 모든 자원 접근 가능
+- 현대 시스템은 메모리에 다수의 프로그램을 적재하여 병행 실행
+- 다양한 프로그램을 안정적으로 제어하고 구획화하기 위해 **프로세스 개념** 등장
+
+<img width="535" height="265" alt="Process1" src="/Users/kimdonghyeon/Desktop/ssafy/cs-study/valofosho/OS/imgaes/process1.png" />
 
 ## 프로세스의 메모리 배치
-- text section: 실행 코드
-- data section: 전역 변수
-- heap section: 프로그램 실행 중, 동적으로 할당되는 메모리
-- stack section: 함수 호출 시, 임시 데이터 저장장소(함수 매개변수, 복귀 주소 및 지역 주소)
+- **text section**: 실행 코드 (크기 고정)  
+- **data section**: 전역 변수 (크기 고정, BSS 영역은 실행 전 초기화)  
+- **heap section**: 프로그램 실행 중 동적으로 할당되는 메모리  
+- **stack section**: 함수 호출 시 생성되는 **스택 프레임(stack frame)**  
+  - 함수 매개변수, 복귀 주소, 지역 변수 등 임시 데이터 포함  
 
 ### 메모리 배치 관련 사항
-- text section과 data section의 크기는 고정되어 있다.
-- heap과 stack section의 크기는 프로그램 실행 중, 동적으로 줄어들거나 늘어날 수 있다.
-- text와 data section은 실행 코드와 전역 변수이므로 프로그램 실행 시 값이 유지
-- 함수가 호출되면 임시 데이터를 담은 활성화 레코드(activation record)는 stack에 push -> 함수가 제어에서 돌아오면 stack에서 pop
-- heap section 또한, 메모리가 동적으로 할당, 반환 될 때마다 동적으로 커짐
-- heap & stack section은 동적으로 크기가 변하므로 OS는 두 영역이 겹치지 않도록 해야한다.
+- text/data section은 프로그램 실행 내내 값이 유지  
+- heap/stack section은 실행 중 동적으로 늘어나거나 줄어듦  
+- 함수 호출 시 **활성화 레코드(activation record = stack frame)** 가 stack에 push → 함수 종료 시 pop  
+- heap & stack은 커지다가 충돌할 수 있으므로 OS가 관리 필요
 
+---
 
 ## 프로그램과 프로세스
-- 프로그램과 프로세스는 다르다
-- 프로그램은 수동적 존재, 프로세스는 능동적 존재
-- 실행 파일이 메모리에 적재되었을 때, 프로그램 -> 프로세스
-- 동일한 프로그램이 실행되어도 다른 메모리 영역을 활용하므로 다른 프로세스
-  - 둘의 텍스트 영역은 같아도, 데이터/힙/스택 영역은 다를 수 있다.
-- 프로세스 실행 과정에서 자식 프로세스를 생성하는 일은 자주 발생
-- 프로세스는 다른 프로세스를 실행시키는 환경이 될 수 있다
-- 
+- 프로그램: 수동적 존재 (디스크에 저장된 실행 파일)  
+- 프로세스: 능동적 존재 (실행 중인 프로그램 + 현재 상태(context))  
+  - context: 프로그램 카운터, 레지스터 값, 메모리 상태 등  
+- 동일한 프로그램이라도 실행하면 각기 다른 프로세스로 동작  
+  - text 영역은 동일할 수 있으나 data/heap/stack은 각기 독립적  
+- 프로세스는 자식 프로세스를 생성할 수 있으며, 다른 프로세스를 실행시키는 환경이 될 수 있음
+
+<img width="535" height="265" alt="Process2" src="/Users/kimdonghyeon/Desktop/ssafy/cs-study/valofosho/OS/imgaes/process2.png" />
+
+---
+
+## 프로세스 상태 (Process State)
+- **생성(new)**: 프로세스 생성 중  
+- **준비(ready)**: 메모리에 적재되어 CPU 할당 대기  
+- **실행(running)**: CPU에서 명령어 실행 중  
+- **대기(waiting)**: I/O 또는 특정 이벤트(세마포어, 메시지 등) 대기 중  
+- **종료(terminated)**: 실행 완료 후 종료  
+
+### 프로세스 상태 전이
+1. **Admit (New → Ready)**  
+   - 프로세스 생성 후 Ready 큐에 들어감  
+2. **Scheduler dispatch (Ready → Running)**  
+   - OS 스케줄러가 CPU를 할당하여 실행 시작  
+3. **Event wait (Running → Waiting)**  
+   - I/O 요청이나 이벤트 발생 시 Waiting 상태로 전이  
+4. **Event occur (Waiting → Ready)**  
+   - I/O 완료나 이벤트 발생 시 Ready 상태로 복귀  
+5. **Interrupt / Time-out (Running → Ready)**  
+   - 선점형 스케줄링에서 CPU를 빼앗기고 Ready로 복귀  
+6. **Running → Terminated**  
+   - 실행 완료 후 종료 상태로 이동  
+
+<img width="535" height="265" alt="Process3" src="/Users/kimdonghyeon/Desktop/ssafy/cs-study/valofosho/OS/imgaes/process3.png" />
+
+---
+
+## 프로세스 제어 블록 (PCB, Process Control Block)
+- **PCB**: 특정 프로세스와 연관된 정보를 담는 자료구조  
+- **커널 영역**에 저장되어 운영체제가 프로세스를 관리할 때 사용  
+
+### PCB 주요 정보
+- **프로세스 식별자 (PID), 부모 PID**  
+- **프로세스 상태 (new, ready, running, waiting, terminated)**  
+- **프로그램 카운터 (PC)**  
+- **CPU 레지스터 값**  
+- **CPU 스케줄링 정보** (우선순위, 스케줄 큐 포인터 등)  
+- **메모리 관리 정보** (페이지 테이블, 세그먼트 테이블 등)  
+- **회계 정보** (사용된 CPU 시간, 계정 번호 등)  
+- **I/O 상태 정보** (열린 파일 목록, 사용 중인 장치 등)  
