--- a/valofosho/OS/프로세스 개념 & 상태 전이.md
+++ b/valofosho/OS/프로세스 개념 & 상태 전이.md
@@ -1,16 +1,18 @@
 # 프로세스 개념(Process Concept)
 
 ## 프로세스란? (Process)
-- 실행 중인 프로그램을 의미
-- 현대 컴퓨팅 시스템에서 작업의 단위가 됨
+- 실행 중인 프로그램의 의미  
+- 현대 컴퓨팅 시스템에서 작업의 단위가 됨  
 
 ## 프로세스 개념의 등장 배경
 - 초기 컴퓨터 시스템은 한 번에 하나의 프로그램만 실행 가능  
-  → 시스템 전체를 독점적으로 제어, 모든 자원 접근 가능
-- 현대 시스템은 메모리에 다수의 프로그램을 적재하여 병행 실행
-- 다양한 프로그램을 안정적으로 제어하고 구획화하기 위해 **프로세스 개념** 등장
+  → 시스템 전체를 독점적으로 제어, 모든 자원 접근 가능  
+- 현대 시스템은 메모리에 다수의 프로그램을 적재하여 병행 실행  
+- 다양한 프로그램을 안정적으로 제어하고 구획화하기 위해 **프로세스 개념** 등장  
 
-<img width="535" height="265" alt="Process1" src="/Users/kimdonghyeon/Desktop/ssafy/cs-study/valofosho/OS/imgaes/process1.png" />
+<img width="535" height="265" alt="Process1" src="./images/process1.png" /><br/>
+
+---
 
 ## 프로세스의 메모리 배치
 - **text section**: 실행 코드 (크기 고정)  
@@ -23,19 +25,19 @@
 - text/data section은 프로그램 실행 내내 값이 유지  
 - heap/stack section은 실행 중 동적으로 늘어나거나 줄어듦  
 - 함수 호출 시 **활성화 레코드(activation record = stack frame)** 가 stack에 push → 함수 종료 시 pop  
-- heap & stack은 커지다가 충돌할 수 있으므로 OS가 관리 필요
+- heap & stack은 커지다가 충돌할 수 있으므로 OS가 관리 필요  
 
 ---
 
 ## 프로그램과 프로세스
-- 프로그램: 수동적 존재 (디스크에 저장된 실행 파일)  
-- 프로세스: 능동적 존재 (실행 중인 프로그램 + 현재 상태(context))  
+- **프로그램**: 수동적 존재 (디스크에 저장된 실행 파일)  
+- **프로세스**: 능동적 존재 (실행 중인 프로그램 + 현재 상태(context))  
   - context: 프로그램 카운터, 레지스터 값, 메모리 상태 등  
 - 동일한 프로그램이라도 실행하면 각기 다른 프로세스로 동작  
   - text 영역은 동일할 수 있으나 data/heap/stack은 각기 독립적  
-- 프로세스는 자식 프로세스를 생성할 수 있으며, 다른 프로세스를 실행시키는 환경이 될 수 있음
+- 프로세스는 자식 프로세스를 생성할 수 있으며, 다른 프로세스를 실행시키는 환경이 될 수 있음  
 
-<img width="535" height="265" alt="Process2" src="/Users/kimdonghyeon/Desktop/ssafy/cs-study/valofosho/OS/imgaes/process2.png" />
+<img width="535" height="265" alt="Process2" src="./images/process2.png" /><br/>
 
 ---
 
@@ -60,7 +62,7 @@
 6. **Running → Terminated**  
    - 실행 완료 후 종료 상태로 이동  
 
-<img width="535" height="265" alt="Process3" src="/Users/kimdonghyeon/Desktop/ssafy/cs-study/valofosho/OS/imgaes/process3.png" />
+<img width="535" height="265" alt="Process3" src="./images/process3.png" /><br/>
 
 ---
 
