docs(week3-OS) : 프로세스 개념 & 상태 전이 내용 추가 및 수정

--- a/aeongseo/OS/01_프로세스 개념 & 상태 전이.md
+++ b/aeongseo/OS/01_프로세스 개념 & 상태 전이.md
@@ -1,39 +1,105 @@
-# 프로세스 개념 & 상태 전이
+# 프로세스 개념 & 상태전이
 
-## 프로세스 (Process)
+## 프로세스
+- **실행중**인 프로그램 = 프로그램을 메모리 공간에 할당하고 실행시켜 **동적인 상태**가 된 것
 
-### 정의
-- 실행 중인 프로그램(Program in execution)
+### 프로그램과 차이점
+- 프로그램 : 하드 디스크에 저장되어 있는 실행 파일
+- 프로세스 : 프로그램이 메모리에 로드되어 실행되는 상태
+- 프로그램 실행되면 OS는 프로그램을 메모리에 적재한 후 프로세스 생성
+→ 프로세스는 프로그램의 실행 단위
 
-    → 단순히 저장된 프로그램이 아니라 메모리에 올라가서 CPU에 의해 실행되는 활동 단위
-    
-### 구성 요소
-1. 프로그램 코드(텍스트 섹션) – 실행할 명령어
-2. 데이터 섹션 – 전역 변수, 상수 등
-3. 스택 – 함수 호출, 지역 변수, 리턴 주소 저장
-4. 힙 – 동적으로 할당되는 메모리
-5. 프로세스 제어 블록(PCB, Process Control Block) – 운영체제가 프로세스를 관리하기 위해 저장하는 정보 (PID, 상태, 레지스터 값, 메모리 정보 등)
+### 프로세스 기본 구성 요소
+- 코드 영역
+	- 프로그램 실행 명령어가 저장되는 영역
+	- 보통 읽기 전용으로 설정되어 프로그램 실행 중 코드 변하지 않음
+- 데이터 영역
+	- 전역 변수, 정적 변수 저장
+	- 프로그램 시작 시 메모리에 할당됨
+- 힙 영역 
+	- 생성자, 인스턴스 등의 동적 메모리 할당 영역
+	- 필요할 때마다 크기가 늘어나거나 줄어들 수 있음
+- 스택 영역
+	- 함수 호출 시 사용되는 지역 변수, 매개변수, 반환 주소 저장
+	- 함수 호출될 때마다 스택 프레임 생성
+	- 함수 끝나면 스택 프레임 제거됨 -> LIFO
+- PCB (프로세스 제어 블록)
+	- OS가 프로세스를 관리하기 위해 사용하는 자료 구조
+	- 프로세스 상태, PC, 레지스터, 스케줄링, 메모리 관리, I/O 상태 정보
 
-### 프로세스 상태 (Process State)
-
-프로세스는 실행되는 동안 여러 상태로 바뀜
-
-1. New (생성) – 프로세스가 막 생성됨. 아직 실행 허가 전
-2. Ready (준비) – CPU를 할당받을 준비가 된 상태. 메모리에 올라가 있으나 대기 중
-3. Running (실행) – CPU를 할당받아 명령어가 실제로 실행 중
-4. Waiting (대기 / Blocked) – 입출력(I/O) 같은 이벤트가 끝나길 기다리는 상태. CPU는 사용하지 않음
-5. Terminated (종료) – 실행이 끝난 상태 PCB가 정리됨
 
 
-## 상태 전이 (Process State Transition)
+## 프로세스 상태
+- new / ready / running / waiting / terminated 5개로 구분
 
-프로세스는 아래와 같이 상태가 변함
+### new (생성)
+- 프로세스가 만들어진 상태
+- 프로그램 실행되면 프로세스 생성되고 이 상태
+- 프로세스가 아직 준비되지 않은 상태
+- 이 단계에서 PCB 생성 등 발생
 
-- New → Ready: 프로세스 생성 후 스케줄러가 준비 큐에 넣음
-- Ready → Running: CPU 스케줄러가 선택하여 CPU를 할당
-- Running → Ready:
-    - 타임 슬라이스(time quantum)가 끝나서 선점(preemption)된 경우
-    - 또는 CPU를 자발적으로 양보한 경우
-- Running → Waiting: 입출력 요청 등으로 CPU 대신 I/O 작업을 기다릴 때
-- Waiting → Ready: I/O 완료 등 이벤트가 끝나 다시 실행 준비 상태
-- Running → Terminated: 프로그램 실행이 끝난 경우
+### ready (준비)
+- 프로세스가 CPU를 할당받기 위해 대기하는 상태 (CPU가 다른 작업 수행 중이어서 실행되지 않은 상태)
+- CPU만 빼면 모든 resource를 갖춘 상태
+- 여러 프로세스가 동시에 ready 상태 가능, CPU 스케줄러가 이들 중 하나 선택해 CPU에 할당
+
+### running (실행)
+- 프로세스가 CPU를 할당받아 실행 중인 상태
+- 하나의 CPU는 동시에 하나의 프로세스만 실행 가능
+
+### waiting / blocked (대기)
+- 프로세스가 I/O 작업이나 이벤트 발생을 기다리는 상태
+- 프로세스가 CPU를 사용하지 않고 외부 작업을 기다리고 있을 때
+	- ex. 파일을 읽거나 쓰는 작업, 네트워크 통신 대기 등
+- 이 상태 해소되면 다시 ready 상태로 전환
+
+### terminated / exit (종료)
+- 프로세스가 실행을 완료하고 종료된 상태
+- 프로세스가 정상적으로 종료되거나, 오류로 인해 강제 종료될 때
+
+
+## 상태전이
+
+### new → ready
+- OS가 프로세스에게 자원 할당을 완료하여 실행할 준비가 완료되었을 때 ready 상태로 전환
+- 준비 큐로 이동하여 할당 기다림
+
+### ready → running
+- CPU가 사용 가능하게 되었을 때 OS는 스케줄링 알고리즘을 통해 다음에 실행할 프로세스를 준비 큐에서 선택
+- 선택된 프로세스는 running 상태로 전환
+
+### running → ready
+- 프로세스가 OS에 의해 선점되는 경우, 해당 프로세스는 ready 상태로 전환
+- ex. 현재 실행중인 프로세스보다 우선순위가 더 높은 프로세스가 ready 상태에 진입하면 OS는 해당 프로세스 실행 위해 현재 실행 중인 프로세스를 ready 상태로 전환
+
+### running → waiting
+- 프로세스가 기다려야 하는 이벤트(I/O 작업, 시스템 콜)가 발생했을 때, waiting 상태로 전환
+- ex. 프로세스가 사용자의 입력 받아야 하는 경우, 사용자가 입력할 때까지 해당 프로세스는 waiting 상태에서 대기
+
+### waiting → ready
+- waiting 상태의 프로세스가 대기하고 있는 이벤트가 완료되었을 때, 해당 프로세스는 ready 상태로 전환
+- 위의 예시에서 사용자의 입력이 주어지면 해당 프로세스는 ready 상태로 전환되고 준비 큐로 이동
+
+### running → terminated
+- 프로세스 실행이 완료되거나, OS에 의해 종료되는 경우, 해당 프로세스는 terminated 상태로 전환
+
+### 상태 전이 예시 : 문서 편집 프로그램 실행 과정 (선점형 스케줄링)
+1. new → ready
+	- 사용자가 컴퓨터에서 문서 편집 프로그램 실행
+	- OS가 메모리와 자원 할당하고 프로그램을 준비 큐로 넣음
+2. ready → running
+	- CPU가 사용 가능해지고 OS 스케줄러가 준비 큐에서 이 프로그램 선택
+3. running → waiting
+	- 프로그램에서 파일 열기 이벤트 발생, 사용자 입력 기다림
+4. waiting → ready
+	- 사용자가 파일을 선택하고 입력 완료
+	- 이벤트가 완료되어 OS가 준비 큐로 프로그램 이동
+5. ready → running
+	- CPU가 다시 사용 가능해지고 OS가 프로그램 선택
+6. running → ready
+	- 백그라운드에서 시스템 업데이트가 실행될 필요
+	- OS가 현재 프로그램을 선점하고, CPU를 시스템 업데이트에게 할당
+7. ready → running
+	- CPU가 다시 사용 가능해지고, OS가 프로그램 다시 선택
+8. running → terminated
+	- 사용자가 프로그램 종료하거나 작업 모두 완료
