docs(week3-OS) : 프로세스 vs 스레드 내용 추가 및 수정

--- a/aeongseo/OS/02_프로세스 vs 스레드.md
+++ b/aeongseo/OS/02_프로세스 vs 스레드.md
@@ -1,28 +1,54 @@
 # 프로세스 vs 스레드
 
-## 프로세스 (Process)
+## 프로세스
+- 운영체제로부터 자원을 할당받은 작업의 단위
+- 각 프로세스는 독립적인 메모리 공간, 다른 프로세스와 메모리 직접적으로 공유 X
 
-### 정의
-- 실행 중인 프로그램의 인스턴스
-### 구성 요소
-- 코드 영역, 데이터 영역, 스택, 힙 등을 포함
-### 특징
-- 독립성 : 각 프로세스는 독립적인 메모리 공간(주소 공간)을 가짐 → 다른 프로세스의 메모리를 직접 접근할 수 없음
-- 생성 비용 : 새로운 프로세스를 만드는 것은 운영체제가 별도의 메모리 공간과 자원을 할당해야 하므로 비용이 큼
-- ex. 크롬 브라우저, 워드, 게임 프로그램 같은 각각의 실행 중인 애플리케이션
+### 프로세스의 정보 공유
+- 프로세스 간 통신 방법
+	- IPC(Inter-Process Communication) 사용
+	- LPC(Local inter_Process Communication) 사용
+	- 별도로 공유 메모리 만들어 정보 주고받도록 설정
+- 프로세스 정보 공유는 CPU 레지스터 교체뿐만 아니라 RAM과 CPU 사이의 캐시 메모리까지 초기화 → 자원 부담이 큼
+- 다중 작업 필요한 경우 스레드 활용이 훨씬 효율적
 
-## 스레드 (Thread)
+### 멀티 프로세스
+- 여러 개의 프로세스를 사용하여 병렬로 작업을 처리하는 방식
+- 각 프로세스는 독립적인 메모리 공간 가짐 → 안정성 높음
+- 프로세스 간 통신이 복잡, 비용 많이 듦
 
-### 정의
-- 프로세스 내에서 실행되는 작업의 흐름 단위
-### 특징
-- 같은 프로세스에 속한 스레드끼리는 코드, 데이터, 힙 영역을 공유
-- 하지만 각 스레드는 개별적인 스택과 레지스터를 가짐
-- 효율성: 메모리를 공유하므로 스레드 간 통신(IPC) 비용이 낮고 협력 작업이 빠름
-- 위험성: 공유 자원에 동시에 접근하면 동기화 문제(경쟁 상태, 데드락 등) 가 발생할 수 있음
-- ex. 크롬 브라우저(한 탭 = 하나의 스레드), 게임에서 화면 처리 스레드 + 음악 재생 스레드 + 네트워크 통신 스레드
+### 장단점
+- 장점
+	- 프로세스 간 메모리 독립성으로 인해 하나의 프로세스가 실패해도 다른 프로세스에 영향 X
+	- 보안성 높고 안정적
+- 단점
+	- 프로세스 간 통신이 복잡하고 느림
+	- 새로운 프로세스 생성하는 데 많은 자원 필요
 
-## 차이점
+## 스레드
+- 프로세스가 할당받은 자원을 이용하는 실행 흐름의 단위
+- 하나의 프로세스 안에 여러 개의 실행 흐름 공존
+- ex. 크롬 브라우저 실행 = 프로세스 / 온라인 쇼핑, 게임, 파일 다운로드 = 스레드
+- 스레드 수 많을수록 프로그램 처리 속도와 수행 가능한 작업 수 증가
+
+### 스레드의 자원 공유
+- 프로세스 내에서 스택과 레지스터만 따로 할당받고 코드, 데이터, 힙 영역은 공유
+	- 스레드는 스택을 따로 가지면서 독립적인 함수 호출이 가능하기 때문에 독립적인 실행 흐름을 가질 수 있음
+
+### 멀티 스레드
+- 하나의 프로세스 내에서 여러 스레드를 사용하여 병렬로 작업을 처리하는 방법
+- 스레드 간 통신 쉽고 빠름
+- 공유 메모리 사용하므로 동기화 문제 발생 가능
+
+### 장단점
+- 장점
+	- 메모리 공유로 인해 스레드 간 통신이 빠르고 효율적
+	- 스레드를 생성하는 오버헤드가 적고, 프로세스보다 빠르게 실행
+- 단점
+	- 메모리 공유하기 때문에 동기화 문제 발생 가능
+	- 한 스레드에서 발생한 문제가 전체 프로세스에 영향 줄 수 있음
+
+## 프로세스 vs 스레드
 
 | 구분 | 프로세스(Process) | 스레드(Thread) |
 | --- | --- | --- |
