fix(week2-CA) : 오개념 수정

--- a/sngjuni/CA/08_병렬 처리 & 멀티코어.md
+++ b/sngjuni/CA/08_병렬 처리 & 멀티코어.md
@@ -6,7 +6,7 @@
 
 ---
 
-- 하나의 작업을 **여러 개의 처리 장치(CPU/코어)** 가 나누어 동시에 수행하는 방식
+- 하나의 작업을 **하나 혹은 여러 개의 처리 장치(CPU/코어)** 가 나누어 동시에 수행하는 방식
 - 목표 : 성능 향상, 처리 속도 증가, 대규모 연산 문제 해결
 
 ### 분류
