fix(week3-OS) : 내용 수정

--- a/sngjuni/OS/05_동기화 기법.md
+++ b/sngjuni/OS/05_동기화 기법.md
@@ -23,7 +23,7 @@
 
 1. 소프트웨어 기반
    - 피터슨(Peterson) 알고리즘, Dekker 알고리즘
-     - 변수를 이용해 두 프로세스 간 상호 배제 보장
+     - turn 변수와 flag 배열을 이용해 두 프로세스 간 상호 배제 보장
      - 학술적 의의는 크지만, 현대 시스템에서는 하드웨어 명령어 사용이 일반적
    - 단점 : Busy Waiting
 2. 하드웨어 지원
@@ -67,7 +67,7 @@
 
    ![d-p_problem1.png](./images/d-p_problem1.png)
 
-   - **상황**: 원탁의 철학자들이 **양 옆의 두 젓가락(공유 자원)을 집어야 식사**
+   - **상황**: 원탁의 철학자들이 **양 옆의 두 포크(공유 자원)를 집어야 식사 가능**
    - **문제**: 모든 철학자가 동시에 한쪽 젓가락만 집으면 **교착상태(Deadlock)** 발생 가능
    - **해결 포인트**: **교착·기아 방지**를 위한 자원 할당 전략(순서 정하기, 제한된 동시 식사 등)
 
