fix(week3-OS) : 프로세스 개념 & 상태 전이 수정

--- a/kinam-ssafy/OS/프로세스 개념&상태 전이.md
+++ b/kinam-ssafy/OS/프로세스 개념&상태 전이.md
@@ -15,6 +15,20 @@
 - **파일 디스크립터**: 열린 파일들에 대한 참조
 - **프로세스 ID(PID)**: 고유 식별자
 
+-----
+### 파일 디스크립터(File Descriptor, FD)
+- 운영체제가 열려있는 파일을 식별하기 위해 부여하는 번호
+- 프로세스는 특정 파일에 접근할 때 파일 이름 대신 이 번호를 사용
+
+### 프로세스 ID(Process ID, PID)
+- 운영체제가 실행 중인 각각의 프로세스를 구별하기 위해 부여하는 고유 번호
+- 프로세스가 종료되면 해당 PID는 다른 프로세스가 재사용 가능 (ex. 301호의 첫 번째 책상, 502호의 첫 번째 책상 등)
+
+301호, 502호는 FD로,  첫 번째 책상은 PID로 이해
+PID는 어떤 프로세스인지를 식별하고, FD는 해당 프로세스가 사용하는 파일을 식별
+-----
+
+
 ## 2. 프로세스 메모리 구조
 
 ```
@@ -34,6 +48,25 @@
 └─────────────┘
 낮은 주소
 ```
+
+---------------
+**Code 영역**
+- 코드 그 자체가 기계어 형태로 저장되는 공간. 프로그램이 시작되면 이 영역의 코드를 CPU가 순서대로 읽어서 실행
+- 중간에 코드가 바뀌면 안 되므로 읽기 전용(Read-Only) 상태
+
+**Data 영역**
+- 전역 변수(Global variables)와 정적 변수(Static variables)가 저장되는 공간
+- 프로그램 시작과 동시에 할당되고, 끌날 때 소멸
+
+**Heap 영역**
+- 프로그래머가 코드를 통해 직접 메모리를 할당하고 해제하는 공간. 동적 할당을 위한 영역
+- 개발자가 직접 관리해야 하므로, 사용 후 메모리 해제하지 않으면 메모리 누수 발생
+
+**Stack 영역**
+- 함수의 호출 정보 관련된 데이터 저장되는 공간. 지역 변수(Local variables), 매개변수(Parameters) 포함
+- LIFO(Last-In, First-Out)구조. 가장 나중에 들어온 데이터가 가장 먼저 나감
+---------------
+
 
 ## 3. 프로세스 상태 (Process State)
 
@@ -71,9 +104,17 @@
 ## 5. 상태 전이 과정 상세 설명
 
 ### 1) New → Ready (admitted)
+- 메모리에 적재되어 실행 대기
 - 프로세스 생성이 완료되고 메모리에 적재
 - PCB(Process Control Block) 생성
 - Ready Queue에 삽입
+
+-----
+**PCB**
+
+운영체제가 수많은 프로세스 돌리기 위해 각 프로세스 정보를 PCB에 담아둠
+---
+
 
 ### 2) Ready → Running (dispatch)
 - 스케줄러가 Ready Queue에서 프로세스 선택
@@ -81,6 +122,7 @@
 - 프로세스 실행 시작
 
 ### 3) Running → Ready (preemption)
+- 선점 스케줄링으로 CPU 회수 
 - **시분할 시스템**에서 할당된 시간 만료
 - 더 높은 우선순위 프로세스 도착
 - 강제적 CPU 회수
@@ -99,41 +141,5 @@
 - 프로세스 정상 종료
 - 오류로 인한 비정상 종료
 - 운영체제에 의한 강제 종료
-
-## 6. 핵심 배경 지식
-
-### PCB (Process Control Block)
-프로세스의 모든 정보를 담고 있는 자료구조
-
-```
-PCB 구성 요소:
-- Process ID (PID)
-- 프로세스 상태
-- Program Counter
-- CPU 레지스터 값들
-- 메모리 관리 정보
-- I/O 상태 정보
-- 계정 정보
-```
-
-### Context Switching
-- CPU가 현재 실행 중인 프로세스에서 다른 프로세스로 전환하는 과정
-- PCB에 현재 프로세스 상태 저장
-- 새로운 프로세스의 PCB에서 상태 복원
-
-### 스케줄링 큐
-- **Ready Queue**: 실행 준비가 된 프로세스들
-- **Waiting Queue**: I/O나 이벤트를 기다리는 프로세스들
-- **Job Queue**: 시스템의 모든 프로세스들
-
-## 7. 실제 적용 사례
-
-### 웹 브라우저 예시
-1. **New**: 브라우저 실행 파일 더블클릭
-2. **Ready**: 메모리에 적재되어 CPU 할당 대기
-3. **Running**: 브라우저 인터페이스 실행
-4. **Waiting**: 웹페이지 요청 시 네트워크 응답 대기
-5. **Ready**: 응답 받아서 다시 실행 준비
-6. **Terminated**: 브라우저 종료
 
 프로세스 상태 전이는 **운영체제의 효율적인 자원 관리**를 위한 핵심 메커니즘이다. 각 상태 간 전이는 시스템의 성능과 응답성에 직접적인 영향을 미친다.
