docs(week4-OS) : 페이징 & 세그멘테이션 내용 추가 및 수정

--- a/aeongseo/OS/08_페이징 & 세그멘테이션.md
+++ b/aeongseo/OS/08_페이징 & 세그멘테이션.md
@@ -1,52 +1,74 @@
 # 페이징 & 세그멘테이션
 
-## 페이징 (Paging)
+## 불연속 메모리 관리
 
-### 개념
+- 프로그램의 일부가 서로 다른 주소 공간에 할당될 수 있는 기법
+- 단편화 문제를 해결하기 위해 제시된 기법
+- 페이징 = 외부 단편화 해소
+- 세그멘테이션 = 내부 단편화 해소
 
-- 메모리를 **고정된 크기(보통 수 KB 단위)**의 블록으로 나누어 관리하는 방법.
-- **프로세스의 논리 주소 공간**과 **물리적 메모리(RAM)**를 같은 크기의 블록 단위로 나눔.
-    - 논리 메모리의 블록: **페이지(Page)**
-    - 물리 메모리의 블록: **프레임(Frame)**
+## 페이징(Paging)
 
-### 동작 방식
+- 프로세스를 일정한 크기의 페이지로 분할해서 메모리에 적재하는 방식
+- 페이지 : 작은 고정 사이즈의 프로세스 조각 (물리적 단위)
+- 물리 메모리 공간 또한 페이지와 동일한 크기의 프레임으로 쪼갬
 
-1. 프로세스는 여러 개의 페이지로 쪼개짐.
-2. 운영체제는 빈 프레임을 찾아 각 페이지를 적재.
-3. *페이지 테이블(Page Table)**을 통해 논리적 주소 → 물리적 주소 변환.
+### 페이지 테이블
 
-### 장점
+- **물리 메모리**는 고정 크기의 **프레임**으로, **가상 메모리**는 고정 크기의 **페이지**로 분리
+- 개별 페이지는 순서에 상관 없이 물리 메모리에 있는 프레임에 매핑되어 저장
+- 모든 프로세스는 하나의 페이지 테이블 가짐
+- 메인 메모리에 적재되어 있는 페이지 번호와 해당 페이지가 위치한 메인 메모리의 시작 주소 있음
 
-- 외부 단편화(External Fragmentation)가 없음. (고정 크기로 나누므로)
-- 메모리를 효율적으로 사용할 수 있음.
+<img src="images/Page_Table_1.png">
 
-### 단점
+<img src="images/Page_Table_2.png">
 
-- 내부 단편화(Internal Fragmentation) 발생 가능. (프레임 크기보다 작은 페이지는 남는 공간이 생김)
-- 주소 변환 과정이 복잡 → 오버헤드 증가.
 
-## 세그멘테이션 (Segmentation)
+> **페이지 테이블 vs 페이징 테이블**
+> 
+> - 운영체제 교과서나 논문, 영어 원문에서는 Page Table
+> - 한국어 번역에서 의미 차이
+>     - 페이지 테이블 : 페이지들의 매핑 정보를 담는 테이블
+>     - 페이징 테이블 : 페이지 단위로 나눠서 관리하는 테이블
 
-### 개념
 
-- 메모리를 **논리적 단위(의미 단위)**에 따라 나누는 방법.
-- 프로그램은 코드, 데이터, 스택 등 여러 **세그먼트(Segment)**로 구분됨.
-- 세그먼트마다 길이가 다름 → 가변 크기 블록.
+### 페이징 장점
 
-### 동작 방식
+- 외부 단편화 해소
+    - 고정된 크기로 메모리 쪼갬
+    - 순서에 상관없이 빈 프레임에 흩어져 적재
+- 메모리 효율적으로 사용 가능
 
-1. 프로세스는 여러 세그먼트(코드, 함수, 배열 등)로 나뉨.
-2. 각 세그먼트는 **세그먼트 테이블(Segment Table)**을 통해 관리.
-    - 엔트리: 시작 주소(base) + 세그먼트 크기(limit).
-3. 주소 변환 시:
-    - (세그먼트 번호, 오프셋) 형태 → base + offset 으로 물리 주소 계산.
+### 페이징 단점
 
-### 장점
+- **내부 단편화** 발생
+    - 프레임 크기보다 작은 페이지는 공간 남음
 
-- 사용자가 논리적으로 이해하기 쉬움 (코드, 스택, 데이터 등 구분).
-- 공유와 보안이 용이 (세그먼트 단위 접근 제어).
+## 세그멘테이션(Segmentation)
 
-### 단점
+- 가상메모리를 서로 다른 크기의 단위인 세그먼트로 분할하는 방식
+- 세그먼트는 의미가 같지 않는 논리적 내용을 기준으로 프로그램을 분할하기 때문에 크기 같지 않음 (논리적 단위)
+- 코드, 데이터, 스택, 힙 등의 세그먼트 단위로 나눔
 
-- 외부 단편화 발생 가능 (가변 크기이므로 남는 공간이 흩어짐).
-- 메모리 관리가 복잡해짐.
+### 세그먼트 테이블
+
+- 분할 방식을 제외하고 페이징과 세그멘테이션 동일 → 매핑 테이블의 동작 방식도 동일
+- (base, limit)로 매핑하여 기록
+    - base : 세그먼트가 적재된 물리 메모리의 시작 주소
+    - limit : 세그먼트의 크기
+
+<img src="images/Segment_Table.png">
+
+### 세그멘테이션 장점
+
+- 내부 단편화 해소
+    - 세그먼트 크기만큼 물리 메모리를 쪼개 적재
+- 사용자가 논리적으로 이해하기 쉬움
+- 세그먼트 단위로 접근하기 때문에 보안과 공유가 용이
+
+### 세그멘테이션 단점
+
+- **외부 단편화** 발생
+    - 가변 크기이므로 남는 공간이 흩어짐
+- 메모리 관리 복잡
