--- a/kinam-ssafy/OS/입출력 시스템 & 디스크 스케줄링.md
+++ b/kinam-ssafy/OS/입출력 시스템 & 디스크 스케줄링.md
@@ -82,6 +82,31 @@ HDD: 10ms (밀리초) = 10,000,000ns
 - 데이터를 임시 저장하는 공간
 - CPU와 장치 간 속도 차이 완화
 
+
+**4KB 데이터를 읽는다면:**
+```
+[레지스터만 사용]
+디스크 → 레지스터(8바이트) → 메모리
+         512번 반복 필요
+
+[로컬 버퍼 사용]
+디스크 → 로컬 버퍼(4KB 한번에) → 메모리
+         1번에 처리
+```
+
+```
+디스크에서 데이터가 조금씩 계속 들어옴
+CPU는 다른 일 하다가 나중에 가져감
+
+→ 로컬 버퍼가 중간에서 임시 보관
+```
+```
+HDD: 10ms (매우 느림)
+CPU: 1ns (매우 빠름)
+
+→ 로컬 버퍼에 모아뒀다가 한번에 전송
+```
+
 ---
 
 ## 3. HDD (Hard Disk Drive) 구조
@@ -122,16 +147,13 @@ HDD: 10ms (밀리초) = 10,000,000ns
 **실린더 (Cylinder)**
 - 여러 플래터의 같은 위치 트랙들
 
-```
-플래터 위에서 본 모습:
-┌─────────────────┐
-│  ╱───╲ ╱───╲   │
-│ ╱     ╳     ╲  │ ← 트랙들
-│ ╲     ╱╲    ╱  │
-│  ╲───╱  ╲──╱   │
-└─────────────────┘
-      섹터
-```
+![alt text](image/2.png)
+
+![alt text](image/3.png)
+
+![alt text](image/4.png)
+
+
 
 ### 디스크 주소 지정
 
@@ -161,7 +183,7 @@ HDD: 10ms (밀리초) = 10,000,000ns
 헤드 이동:
 현재 트랙 10 → 목표 트랙 100
 이동 거리: 90 트랙
-탐색 시간: 약 5~10ms
+탐색 시간: 약 5~20ms
 ```
 
 **가장 시간이 오래 걸리는 부분**
@@ -191,154 +213,47 @@ HDD: 10ms (밀리초) = 10,000,000ns
 
 ```
 일반적인 비율:
-탐색 시간: 5ms (가장 큼)
+탐색 시간: 10ms (가장 큼)
 회전 지연: 4ms
 전송 시간: 0.04ms (가장 작음)
 
 → 탐색 시간을 줄이는 것이 핵심
 ```
 
----
+## HDD vs SSD 비교표
 
-## 5. I/O 처리 방법
-
-### (1) 프로그래밍 I/O (Polling)
-
-#### 동작 방식
-CPU가 계속 상태 레지스터를 확인하면서 대기
-
-```
-while (상태 레지스터 == BUSY) {
-    // 계속 확인
-}
-데이터 읽기
-```
-
-#### 장점
-- 구현 단순
-- 추가 하드웨어 불필요
-
-#### 단점
-- CPU 시간 낭비
-- 다른 작업 수행 불가
-- 비효율적
+| 항목 | HDD | SSD |
+|------|-----|-----|
+| **저장 방식** | 자기(magnetic) | 전기(flash memory) |
+| **구동 방식** | 기계적 (회전, 이동) | 전자적 (회로) |
+| **탐색 시간** | 5~10ms | 거의 0 (0.1ms 이하) |
+| **회전 지연** | 4ms | 없음 |
+| **접근 속도** | 느림 (ms 단위) | 빠름 (μs 단위) |
+| **순차 읽기** | 유리 | 매우 빠름 |
+| **랜덤 읽기** | 불리 (헤드 이동 필요) | 빠름 (위치 무관) |
+| **소음** | 있음 (회전, 이동) | 없음 |
+| **발열** | 많음 | 적음 |
+| **충격** | 약함 (기계 부품) | 강함 |
+| **수명** | 기계 마모 | 쓰기 횟수 제한 |
+| **용량** | 대용량 (TB) | 상대적으로 적음 |
+| **가격** | 저렴 (GB당) | 비쌈 |
+| **디스크 스케줄링** | **필요** (탐색 시간 최소화) | **불필요** (접근 시간 동일) |
 
 ---
 
-### (2) 인터럽트 기반 I/O
+### 핵심 차이
 
-#### 동작 방식
 ```
-1. CPU가 I/O 요청
-2. CPU는 다른 작업 수행
-3. I/O 완료 시 인터럽트 발생
-4. CPU가 인터럽트 처리
+HDD: 기계적 → 위치 중요 → 스케줄링 필요
+SSD: 전자적 → 위치 무관 → FCFS로 충분
 ```
 
-#### 과정
-```
-시간 흐름:
-CPU: [I/O요청]──[다른작업]──[인터럽트 처리]
-                    ↑
-I/O:        [데이터 전송 중]
-```
-
-#### 장점
-- CPU 효율적 사용
-- 동시 작업 가능
-
-#### 단점
-- 인터럽트 처리 오버헤드
-- 많은 I/O 요청 시 인터럽트 빈발
+> 따라서 디스크 스케줄링 알고리즘은 SSD는 불필요
 
 ---
 
-### (3) DMA (Direct Memory Access)
 
-#### 개념
-CPU 개입 없이 I/O 장치가 직접 메모리에 접근
-
-#### 동작 방식
-```
-1. CPU가 DMA 컨트롤러에 I/O 요청
-   - 전송할 데이터 주소
-   - 전송할 크기
-   - 장치 정보
-
-2. DMA가 직접 메모리↔장치 간 데이터 전송
-
-3. 전송 완료 후 인터럽트 발생
-
-4. CPU가 결과 처리
-```
-
-```
-구조:
-┌─────────┐
-│   CPU   │ ① I/O 요청
-└────┬────┘      ↓
-     │      ┌────────┐
-     │      │  DMA   │
-     │      │Controller│
-┌────┴─────┬┴────────┤
-│  메모리   │←②─────┼──→ 디스크
-└──────────┴─────────┘
-             직접 전송
-```
-
-#### 장점
-- CPU 거의 개입 안 함
-- 대용량 데이터 전송 효율적
-- 인터럽트 횟수 감소
-
-#### 단점
-- 추가 하드웨어 필요
-- 버스 경쟁 가능
-
----
-
-## 6. I/O 소프트웨어 계층
-
-### 계층 구조
-
-```
-┌─────────────────────────┐
-│   사용자 프로그램        │
-├─────────────────────────┤
-│ 장치 독립 I/O 소프트웨어 │
-├─────────────────────────┤
-│   디바이스 드라이버      │
-├─────────────────────────┤
-│  인터럽트 핸들러         │
-├─────────────────────────┤
-│      하드웨어            │
-└─────────────────────────┘
-```
-
-### 각 계층의 역할
-
-**(1) 인터럽트 핸들러**
-- 인터럽트 발생 시 처리
-- 대기 중인 프로세스 깨우기
-
-**(2) 디바이스 드라이버**
-- 특정 장치 제어
-- 장치별 명령 변환
-- 상태 관리
-
-**(3) 장치 독립 I/O 소프트웨어**
-- 공통 I/O 기능 제공
-- 버퍼링, 캐싱
-- 오류 처리
-- 장치 명명 및 보호
-
-**(4) 사용자 수준 I/O 소프트웨어**
-- 라이브러리 함수
-- read(), write() 등
-
----
-
-## 7. 디스크 스케줄링 알고리즘
+## 5. 디스크 스케줄링 알고리즘
 
 ### 스케줄링의 목표
 - **탐색 시간 최소화** (가장 중요)
@@ -367,6 +282,8 @@ CPU 개입 없이 I/O 장치가 직접 메모리에 접근
 총 헤드 이동: 640 트랙
 ```
 
+![alt text](image/5.png)
+
 #### 장점
 - 구현 단순
 - 공정함
@@ -392,6 +309,8 @@ CPU 개입 없이 I/O 장치가 직접 메모리에 접근
 
 총 헤드 이동: 236 트랙
 ```
+
+![alt text](image/6.png)
 
 #### 장점
 - 평균 탐색 시간 감소
@@ -420,6 +339,8 @@ CPU 개입 없이 I/O 장치가 직접 메모리에 접근
 
 총 헤드 이동: 236 트랙
 ```
+
+![alt text](image/7.png)
 
 #### 특징
 - 양방향 왕복 운동
@@ -455,6 +376,8 @@ CPU 개입 없이 I/O 장치가 직접 메모리에 접근
            + 199 트랙 (복귀)
 ```
 
+![alt text](image/8.png)
+
 #### 장점
 - 더 균등한 대기 시간
 - SCAN보다 공정함
@@ -483,6 +406,8 @@ SCAN/C-SCAN의 개선 - 끝까지 가지 않고 마지막 요청까지만 이동
 마지막 요청까지만 가고 방향 전환
 ```
 
+![alt text](image/9.png)
+
 #### C-LOOK 동작
 ```
 53 → 65 → 67 → 98 → 122 → 124 → 183
@@ -492,13 +417,15 @@ SCAN/C-SCAN의 개선 - 끝까지 가지 않고 마지막 요청까지만 이동
 마지막 요청까지만 가고 첫 요청으로 이동
 ```
 
+![alt text](image/10.png)
+
 #### 장점
 - 불필요한 헤드 이동 제거
 - SCAN/C-SCAN보다 효율적
 
 ---
 
-## 8. 스케줄링 알고리즘 비교
+## 6. 스케줄링 알고리즘 비교
 
 ### 성능 비교
 
@@ -531,160 +458,3 @@ SCAN/C-SCAN의 개선 - 끝까지 가지 않고 마지막 요청까지만 이동
 - 실시간 시스템
 
 ---
-
-## 9. SSD (Solid State Drive)
-
-### HDD와의 차이
-
-```
-HDD:
-- 회전하는 디스크
-- 기계적 이동
-- 느림 (ms 단위)
-- 순차 접근 유리
-
-SSD:
-- 플래시 메모리
-- 전자적 접근
-- 빠름 (μs 단위)
-- 임의 접근 가능
-```
-
-### SSD 특징
-
-#### 장점
-- 탐색 시간 거의 없음
-- 임의 접근 빠름
-- 소음, 발열 적음
-- 충격에 강함
-
-#### 단점
-- 쓰기 횟수 제한
-- 비싼 가격
-- 용량 제한
-
-### SSD 스케줄링
-
-```
-SSD에서는 디스크 스케줄링 불필요:
-- 기계적 이동 없음
-- 모든 위치 접근 시간 동일
-- FCFS만으로도 충분
-```
-
-### 웨어 레벨링 (Wear Leveling)
-
-```
-문제: 같은 블록만 계속 쓰면 수명 단축
-
-해결: 쓰기를 여러 블록에 분산
-- 논리 주소 → 물리 주소 매핑
-- FTL (Flash Translation Layer)
-```
-
----
-
-## 10. 성능 최적화 기법
-
-### (1) 디스크 캐시
-
-```
-자주 접근하는 블록을 메모리에 캐싱:
-- 읽기 캐시: 미리 읽기
-- 쓰기 캐시: 지연 쓰기
-
-효과:
-- 디스크 접근 횟수 감소
-- 응답 시간 개선
-```
-
-### (2) 블록 클러스터링
-
-```
-연속된 블록을 묶어서 처리:
-- 여러 개 요청을 하나로 결합
-- 헤드 이동 횟수 감소
-
-예시:
-블록 100, 101, 102 요청
-→ 한 번에 처리
-```
-
-### (3) 미리 읽기 (Prefetching)
-
-```
-순차 접근 패턴 감지 시:
-- 다음 블록 미리 읽기
-- 캐시에 저장
-
-효과:
-- 순차 읽기 성능 향상
-```
-
-### (4) RAID
-
-```
-여러 디스크를 묶어 사용:
-- RAID 0: 스트라이핑 (성능)
-- RAID 1: 미러링 (안정성)
-- RAID 5: 패리티 (균형)
-
-효과:
-- 성능 향상
-- 안정성 향상
-- 용량 확장
-```
-
----
-
-## 11. 핵심 정리
-
-### I/O 시스템의 핵심
-
-**계층 구조**
-```
-사용자 프로그램
-    ↓
-장치 독립 소프트웨어
-    ↓
-디바이스 드라이버
-    ↓
-하드웨어
-```
-
-**처리 방법**
-- Polling: 간단, 비효율
-- 인터럽트: 효율적, 오버헤드
-- DMA: 대용량 전송 최적
-
-### 디스크 접근 시간
-
-```
-총 시간 = 탐색 시간 + 회전 지연 + 전송 시간
-         (가장 큼)   (중간)     (작음)
-
-목표: 탐색 시간 최소화
-```
-
-### 스케줄링 알고리즘 선택
-
-```
-성능 우선: SSTF
-안정성 + 성능: SCAN/LOOK (추천)
-공정성: C-SCAN/C-LOOK
-단순함: FCFS
-```
-
-### HDD vs SSD
-
-```
-HDD:
-- 기계적, 느림
-- 스케줄링 중요
-- 대용량, 저렴
-
-SSD:
-- 전자적, 빠름
-- 스케줄링 불필요
-- 쓰기 수명 관리 중요
-```
