fix(week6-NW) : 라우팅 오타 수정

--- a/sngjuni/NW/04_라우팅.md
+++ b/sngjuni/NW/04_라우팅.md
@@ -34,7 +34,7 @@
 - 정적 라우팅 (Static Routing)
   - 관리자가 직접 경로를 수동으로 지정
   - 네트워크 변화에 자동 대응 불가
-  - 단수 구조나 테스트 환경에서 사용
+  - 단순 구조나 테스트 환경에서 사용
 - 동적 라우팅 (Dynamic Routing)
   - 라우터 간 라우팅 프로토콜을 통해 경로 정보를 자동 교환
   - 네트워크 변화(장애, 부하)에 따라 경로를 자동 갱신
@@ -50,13 +50,19 @@
    → **IGP(Interior Gateway Protocol)** 라고도 함.
 
    - **RIP(Routing Information Protocol)**
+
      - 거리 벡터(Distance Vector) 기반 - 이웃하고만 통신
-     - ![dv.png](./images/dv.png)
+
+       ![dv.png](./images/dv.png)
+
      - 홉 수 (Hop Count)가 적은 경로를 선택 (최대 15홉 제한)
      - 단순하지만 확장성 낮음
+
    - **OSPF(Open Shortest Path First)**
      - 링크 상태(Link State) 기반 - AS 안의 모든 Router와 통신
-     - ![ls.png](./images/ls.png)
+
+       ![ls.png](./images/ls.png)
+
      - Dijkstra 알고리즘으로 최단 경로 계산
      - 영역(Area) 단위로 나누어 대규모 네트워크에 효율적
    - **EIGRP(Enhanced Interior Gateway Routing Protocol)**
@@ -64,7 +70,7 @@
      - 거리 벡터 + 링크 상태의 하이브리드 방식
      - 빠른 수렴성과 대역폭 효율
 
-2. Inter-domain Routinh Ptotocol
+1. Inter-domain Routinh Ptotocol
 
    서로 다른 자율 시스템 간의 라우팅을 담당하는 외부 라우팅 프로토콜
    → **EGP(Exterior Gateway Protocol)** 라고도 함.
