docs(week6-NW): 데이터 링크 계층 내용 추가 및 수정

--- a/valofosho/NW/02_데이터  링크 계층.md
+++ b/valofosho/NW/02_데이터  링크 계층.md
@@ -13,7 +13,7 @@
 | **계층 번호** | OSI 7계층 중 2계층 |
 | **데이터 단위** | **Frame (프레임)** |
 | **주소 방식** | **MAC 주소 (물리 주소)** 사용 |
-| **주요 기능** | 오류 검출, 흐름 제어, 프레임 동기화, 접근 제어 (MAC) |
+| **주요 기능** | 오류 검출, 흐름 제어, 프레임 동기화, 매체 접근 제어(MAC) |
 | **대표 장비** | 스위치(Switch), 브리지(Bridge), 네트워크 카드(NIC) |
 | **대표 프로토콜** | Ethernet, PPP, HDLC, ARP, RARP |
 
@@ -22,45 +22,76 @@
 ## ⚙️ 주요 기능
 
 ### 1️⃣ 프레이밍 (Framing)
-- 네트워크 계층에서 받은 **패킷(Packet)** 을 **프레임(Frame)** 단위로 나누어 전송
+- 네트워크 계층에서 받은 **패킷(Packet)** 을 **프레임(Frame)** 단위로 캡슐화.
 - 각 프레임에 **헤더(Header)** 와 **트레일러(Trailer)** 추가  
-  - **헤더:** 송수신 MAC 주소, 제어 정보 등  
+  - **헤더:** 송·수신 MAC 주소, 제어 정보  
   - **트레일러:** 오류 검출용 FCS(Frame Check Sequence)
 
 ```
 
-| 프레임 헤더 | 데이터 (패킷) | 프레임 트레일러 |
+| 프레임 헤더 | 데이터(패킷) | 프레임 트레일러 |
 
 ```
 
 ---
 
 ### 2️⃣ 오류 제어 (Error Control)
-- **전송 중 발생한 오류 검출 및 재전송 요청**
-- 대표적 방법:  
-  - **패리티 비트(Parity Bit)**  
-  - **CRC(Cyclic Redundancy Check)**  
-  - **ARQ(Automatic Repeat reQuest)**
+- **전송 중 오류를 검출**하고 필요 시 재전송 요청.
+- 대표적인 방법:
 
-> 💡 데이터 링크 계층은 *에러 검출(Error Detection)* 까지만 수행하고,  
-> *복구(Error Correction)* 는 일반적으로 상위 계층(전송 계층)이 담당.
+| 방식 | 설명 | 비고 |
+|:--|:--|:--|
+| **패리티 비트 (Parity Bit)** | 데이터 비트에 1비트를 추가해 짝수/홀수 패리티 확인 | 단순 검출만 가능 |
+| **CRC (Cyclic Redundancy Check)** | 다항식 기반의 잉여검사로 비트 오류 검출 | 이더넷 프레임에서 사용 |
+| **체크섬 (Checksum)** | 모든 비트를 더한 합의 보수값을 저장 후 수신 측에서 검증 | IP, TCP, UDP에서도 사용 |
+| **ARQ (Automatic Repeat reQuest)** | 오류 검출 시 자동 재전송 요청 | Stop-and-Wait, Go-Back-N 등 |
+
+---
+
+#### 📘 CRC(Cyclic Redundancy Check) 예시
+1. 송신 측은 데이터를 **이진 다항식 D(x)** 로 보고, 표준 제너레이터 **G(x)** 로 나눔  
+2. **나머지 R(x)**(=FCS)을 프레임 뒤에 붙여 전송  
+3. 수신 측은 동일한 **G(x)** 로 나누어 **나머지가 0인지 검증**
+
+```
+
+예: D=1101011011, G=10011
+→ 송신: R=1110 → 전송 데이터=11010110111110
+→ 수신: 나눗셈 결과 나머지=0000 → 정상
+
+```
+
+> ⚙️ **G는 프로토콜 표준에 포함됨**  
+> - Ethernet: **CRC-32** 사용  
+> - PPP, USB: **CRC-16** 사용
+
+---
+
+#### 📘 체크섬(Checksum)
+- 데이터 블록의 모든 워드를 더하고 **1의 보수(Complement)** 를 취해 송신  
+- 수신 측도 합산 후 결과가 `1111...1111`이면 정상  
+- IP 헤더, TCP, UDP 등에서 널리 사용됨
 
 ---
 
 ### 3️⃣ 흐름 제어 (Flow Control)
-- 송신 측이 너무 빠르게 데이터를 보내 **수신 측 버퍼가 넘치지 않도록 조절**
-- 대표 방식:
-  - **Stop-and-Wait**: 한 프레임 전송 후 ACK 수신 대기  
-  - **Sliding Window**: 여러 프레임을 연속 전송, 수신 확인 기반 윈도우 이동
+- 송신 측의 전송 속도가 수신 측 처리 속도를 초과하지 않도록 제어.
+
+| 방식 | 설명 |
+|:--|:--|
+| **Stop-and-Wait** | 한 프레임 전송 후 ACK 수신 시 다음 프레임 전송 |
+| **Sliding Window** | 여러 프레임을 연속 전송 후, ACK 수신 시 윈도우 이동 (효율적) |
 
 ---
 
 ### 4️⃣ 접근 제어 (Access Control)
-- 여러 장치가 **공유 매체(예: LAN 케이블)** 를 사용할 때 충돌 방지
-- **MAC(Media Access Control)** 하위 계층에서 수행  
-- 대표 방식:
-  - **CSMA/CD** (Carrier Sense Multiple Access with Collision Detection): Ethernet 유선 LAN  
-  - **CSMA/CA** (Collision Avoidance): Wi-Fi 무선 LAN
+- 여러 장치가 하나의 전송 매체(LAN, 무선 등)를 공유할 때 충돌 방지
+- **MAC(Media Access Control)** 하위 계층에서 수행
+
+| 방식 | 설명 | 사용 예시 |
+|:--|:--|:--|
+| **CSMA/CD** | 충돌 발생 시 감지 → 대기 후 재전송 | 유선 LAN (Ethernet) |
+| **CSMA/CA** | 충돌을 사전에 회피(전송 예약) | 무선 LAN (Wi-Fi) |
 
 ---
 
@@ -68,8 +99,8 @@
 
 | 하위 계층 | 주요 역할 | 예시 |
 |:--|:--|:--|
-| **LLC (Logical Link Control)** | 상위 계층과의 인터페이스 제공, 오류/흐름 제어 | IEEE 802.2 |
-| **MAC (Media Access Control)** | 물리적 매체 접근 제어, 주소 지정(MAC) | Ethernet(802.3), Wi-Fi(802.11) |
+| **LLC (Logical Link Control)** | 상위 계층과 인터페이스 제공, 오류·흐름 제어 | IEEE 802.2 |
+| **MAC (Media Access Control)** | 물리 매체 접근 제어, 주소 지정(MAC) | Ethernet(802.3), Wi-Fi(802.11) |
 
 ```
 
@@ -87,13 +118,126 @@
 
 ---
 
-## 💾 주소 체계
+## 💡 이더넷(Ethernet)과 스위치(Switch)
 
-| 구분 | 설명 | 예시 |
+### 🧩 이더넷(Ethernet)
+- **가장 널리 사용되는 유선 LAN 프로토콜 (IEEE 802.3)**
+- **프레임 단위 통신**: 송·수신 MAC 주소, 타입, 데이터, FCS 포함
+- **CSMA/CD** 기반의 충돌 감지형 매체 접근
+- 전송 속도: 10Mbps → 100Gbps 이상까지 발전
+- 동일 네트워크(브로드캐스트 도메인) 내에서 작동
+
+```
+
+[이더넷 프레임 구조]
+┌─────────────────────────────────────────────┐
+│ 목적지 MAC | 출발지 MAC | 타입 | 데이터 | FCS │
+└─────────────────────────────────────────────┘
+
+```
+
+---
+
+### 🧩 스위치(Switch)
+> **데이터 링크 계층(2계층)** 장비로,  
+> MAC 주소를 기반으로 프레임의 전송 경로를 결정한다.
+
+| 기능 | 설명 |
+|:--|:--|
+| **MAC 주소 학습(Learning)** | 프레임의 출발지 MAC 주소를 보고 MAC 테이블에 기록 |
+| **전달(Forwarding)** | 목적지 MAC 주소가 테이블에 있으면 해당 포트로 전송 |
+| **홍수(Flooding)** | 목적지 MAC을 모를 경우 모든 포트로 전송 (브로드캐스트) |
+| **노화(Aging)** | 일정 시간 동안 사용되지 않은 MAC 정보는 삭제 |
+
+---
+
+### ⚙️ 스위치 동작 과정 예시
+
+```
+
+[PC1]──(Port1)──┐
+[PC2]──(Port2)──┤  Switch
+[PC3]──(Port3)──┘
+
+```
+
+1️⃣ PC1 → PC2로 프레임 전송 (`Src=MAC1`, `Dst=MAC2`)  
+→ 스위치는 **Port1=MAC1** 을 학습  
+→ MAC2 주소가 없으므로 **모든 포트로 Flooding**  
+
+2️⃣ PC2 응답 (`Src=MAC2`, `Dst=MAC1`)  
+→ 스위치는 **Port2=MAC2** 를 학습  
+→ 이제부터 MAC1↔MAC2 통신은 **직접 포트 간 유니캐스트** 전송
+
+---
+
+### 🧩 스위치 내부 구조도
+
+```
+
+┌──────────────────────────────┐
+│         Switch 내부 구조       │
+├──────────────────────────────┤
+│      [1] 입력 포트 (Ingress)  │  ← 프레임 수신
+│           │                   │
+│           ▼                   │
+│      [2] MAC 주소 테이블      │  ← 출발지 MAC 학습 / 목적지 조회
+│           │                   │
+│           ▼                   │
+│      [3] 스위칭 패브릭       │  ← 프레임 전송 경로 결정 (하드웨어 레벨)
+│           │                   │
+│           ▼                   │
+│      [4] 출력 포트 (Egress)   │  ← 프레임 전송
+└──────────────────────────────┘
+
+```
+
+> - **MAC Address Table**: `MAC 주소 ↔ 포트 번호` 매핑 정보 저장  
+> - **Switching Fabric**: 실제 데이터가 내부에서 이동하는 경로(백플레인)  
+> - **Forwarding Logic**: 하드웨어 레벨에서 빠르게 프레임 전달 결정
+
+---
+
+### 🧩 스위치 vs 허브 비교
+
+| 구분 | **허브(Hub)** | **스위치(Switch)** |
 |:--|:--|:--|
-| **MAC 주소** | 네트워크 인터페이스 카드(NIC)에 부여된 **고유 식별자** | `00-1B-44-11-3A-B7` |
-| **구성** | 48비트(6바이트): <br>상위 24비트(OUI, 제조사 식별자) + 하위 24비트(일련번호) | |
-| **표기 방식** | 16진수 6쌍(`:` 또는 `-` 구분) | `00:1A:2B:3C:4D:5E` |
+| **계층** | 물리 계층 (1계층) | 데이터 링크 계층 (2계층) |
+| **전송 방식** | 브로드캐스트 (모든 포트로 전송) | MAC 주소 기반 유니캐스트 |
+| **MAC 테이블** | 없음 | 있음 |
+| **충돌 도메인** | 전체 네트워크 1개 | 포트별 분리 |
+| **속도/효율** | 낮음 | 높음 |
+
+---
+
+## 💾 MAC 주소 (Media Access Control Address)
+
+> **데이터 링크 계층에서 장치를 식별하는 고유한 물리적 주소**
+
+| 항목 | 설명 |
+|:--|:--|
+| **길이** | 48비트 (6바이트) |
+| **형식** | 16진수 6쌍 (`:` 또는 `-` 구분) |
+| **예시** | `00:1A:2B:3C:4D:5E` |
+| **고유성** | 전 세계에서 유일 (NIC 제조 시 EEPROM에 저장) |
+
+---
+
+### 🧠 MAC 주소 구조
+
+```
+
+┌──────────────┬────────────────┐
+│ OUI (24bit)  │ Device ID(24bit) │
+└──────────────┴────────────────┘
+↑제조사 ID       ↑일련번호
+
+```
+
+- **OUI (Organizationally Unique Identifier)**: IEEE가 제조사별로 부여  
+- **Device ID**: 제조사 내부 일련번호  
+- **브로드캐스트 주소:** `FF:FF:FF:FF:FF:FF`  
+- **멀티캐스트 주소:** 첫 비트가 1로 시작 (`01:00:5E:...`)
 
 ---
 
@@ -101,30 +245,30 @@
 
 | 프로토콜 / 기술 | 설명 |
 |:--|:--|
-| **Ethernet (IEEE 802.3)** | 유선 LAN 표준, CSMA/CD 기반 |
+| **Ethernet (IEEE 802.3)** | 유선 LAN 표준, CRC-32 기반 오류 검출 |
 | **Wi-Fi (IEEE 802.11)** | 무선 LAN 표준, CSMA/CA 기반 |
-| **PPP (Point-to-Point Protocol)** | 두 지점 간 직렬 통신용 |
-| **HDLC (High-Level Data Link Control)** | 비트 기반 동기식 데이터 링크 프로토콜 |
-| **ARP (Address Resolution Protocol)** | IP ↔ MAC 주소 변환 |
-| **RARP (Reverse ARP)** | MAC ↔ IP 주소 변환 |
+| **PPP (Point-to-Point Protocol)** | 1:1 직렬 통신용 |
+| **HDLC** | 동기식 비트 기반 링크 제어 프로토콜 |
+| **ARP** | IP → MAC 주소 변환 |
+| **RARP** | MAC → IP 주소 변환 |
 
 ---
 
 ## 🧠 핵심 요약
 
-| 항목 | 핵심 요약 |
+| 항목 | 요약 |
 |:--|:--|
-| **역할** | 오류 없는 데이터 프레임 전송 |
+| **역할** | MAC 주소 기반으로 프레임 생성·전송 |
 | **단위** | Frame |
-| **주소** | MAC 주소 (물리적 주소) |
+| **주소 체계** | MAC (물리 주소) |
 | **장비** | 스위치, 브리지 |
-| **하위 계층** | LLC / MAC |
-| **핵심 기능** | 오류 제어, 흐름 제어, 접근 제어 |
+| **주요 기능** | 오류 검출(CRC), 흐름 제어, 접근 제어(MAC) |
+| **핵심 기술** | CSMA/CD, FCS, LLC, Ethernet |
 | **대표 프로토콜** | Ethernet, PPP, ARP |
 
 ---
 
-## 📊 정리 다이어그램
+## 📊 종합 다이어그램
 
 ```
 
@@ -132,16 +276,25 @@
 ┌───────────────────────────────┐
 │  네트워크 계층 (IP)             │  패킷
 ├───────────────────────────────┤
-│  데이터 링크 계층 (Ethernet)    │  프레임화 / MAC 주소 추가
+│  데이터 링크 계층 (Ethernet)    │  프레임화 + MAC 주소 + FCS
 ├───────────────────────────────┤
 │  물리 계층 (전선, 신호)         │  비트 전송
 └───────────────────────────────┘
+
+스위치 내부
+┌──────────────────────────────┐
+│ 입력포트 → MAC 테이블 → 스위칭패브릭 → 출력포트 │
+└──────────────────────────────┘
 
 ```
 
 ---
 
-> ✅ **한줄 요약:**  
-> 데이터 링크 계층은 **“MAC 주소 기반으로 오류 없는 프레임 전송”** 을 책임지는 계층이다.  
-> 즉, IP가 어디로 가야 하는지를 결정한다면, **Data Link은 어떻게 도달할지를 결정**한다.
+> ✅ **최종 한줄 요약:**  
+> 데이터 링크 계층은 **MAC 주소 기반으로 프레임을 전송하며**,  
+> 스위치는 **이 MAC 주소를 학습해 포트별로 효율적인 데이터 전달**을 수행한다.  
+> CRC·체크섬으로 오류를 검출하고, CSMA/CD를 통해 충돌 없는 통신을 보장한다.
 ```
+
+---
+
