docs(week6-NW) : 데이터링크 계층 내용 수정

--- a/aeongseo/NW/02_데이터링크 계층.md
+++ b/aeongseo/NW/02_데이터링크 계층.md
@@ -27,8 +27,14 @@
 
 - 오류 검출 코드 추가
 - 대표 방식 : CRC (Cyclic Redundancy Check)
-    - 송신 : 데이터를 다항식으로 계산해 잉여 비트 추가
-    - 수신 : 다시 계산 → 다르면 오류 발생
+    - 전송/저장 중 비트 오류를 검출하기 위한 방법
+  - 송신 : 데이터를 생성 다항식으로 나눈 나머지를 붙여 전송
+  - 수신 : 같은 방법으로 계산 → 다르면 오류 발생
+    > Q. 2계층인데 왜 비트 오류 검출?
+    >
+    > A. 1계층은 단순 전송만 담당. 오류 검출 X
+    >
+    > &nbsp;&nbsp;&nbsp;2계층에서 프레임 단위로 오류 검출
 - 일부 프로토콜은 재전송 요청(ARQ)으로 수정 가능
 
 ### 4) 흐름 제어 (Flow Control)
@@ -36,14 +42,16 @@
 - 송신 측이 너무 빨리 보내면 수신 측 감당 못함 → 흐름 제어 필요
 - 방법
     - Stop and Wait : 한 프레임 보내고 확인 응답(ACK) 기다림
-    - Sliding WIndow : 여러 프레임 연속으로 보내되, ACK 윈도우 단위로 조절
+- 4계층의 흐름제어와의 차이
+    - 2계층 : 한 홉(Neighbor) 간 통신, 링크 단위 버퍼 오버플로 방지
+    - 4계층 : 종단 간 통신, 수신측 호스트의 버퍼 오버플로 방지
 
 ### 5) 접근 제어 (Access Control)
 
 - 여러 기기가 같은 통신 채널 사용할 때, 누가 먼저 전송할지 결정
 - 매체 접근 제어(MAC; Medium Access Control) : 충돌 방지 위한 규칙들
 - 주요 방식
-    - CSMA/CD (Ethernet, 우선 LAN)
+    - CSMA/CD (Ethernet, 유선 LAN)
         - Carrier Sense Multiple Access with Collision Detection
         - 보내기 전 통신선 비었는지 확인, 충돌 시 감지 후 재전송
     - CSMA/CA (Wi-Fi, 무선 LAN)
